2005-12-20  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/Makefile.am (noinst_HEADERS): Add taperscan.h.

2005-12-20  John Franks <jrfranks@zmanda.com>

	* restore-src/restore.c: Remove unused variables.
				 Fix uninitialize reference to bytes_read.
	* server-src/amcheck.c:	 Remove unused variables.
				 Include taperscan.h for missing prototype.
	* server-src/amtape.c:	 Remove unused variables.
				 Include taperscan.h for missing prototype.
	* server-src/taper.c:	 Remove unused variables.
				 Minor indenting changes.
	* server-src/taperscan.c:Remove unused variables.
				 Fix typo which assigns NULL rather than
				  checks for NULL.
				 Commented out reference to auto_pos which
				  is assigned but never used...

2005-12-20  Jean-Louis Martineau <martineau@zmanda.com>

	* common-src/fileheader.c (parse_file_header): Parse '/' in part.
	* common-src/fileheader.c (build_header): Add space ' ' before "part".

2005-12-20  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/reporter.c: Fix report of output size.

2005-12-19  Ian Turner <ian@zmanda.com>
	* server-src/taperscan.c: Check that automatic tape labels satisfy
	the labelstr.

2005-12-19  Ian Turner <ian@zmanda.com>
	* server-src/fileheader.c: Fix broken split-dump file headers.

2005-12-18  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Paul Bijnens

	* server-src/amcheck.c: Tapelist file is regular file.

2005-12-17  Jean-Louis Martineau <martineau@zmanda.com>

	* restore-src/restore.c (get_block): Return a ssize_t.
	* restore-src/restore.c: convert ssize_t to long for printing.
	* restore-src/restore.c (restore>): Remove unused variable, outpipe,
	   outpipe2, i.

2005-12-17  John R. Franks <jrfranks@zmanda.com>

	* restore-src/restore.h (read_file_header, restore): Return a ssize_t
	  instead of using a global variable bytes_read.
	* restore-src/restore.c: Use local variable instead of global
	  bytes_read. Many memory management fixe. Fixe pipe handling,