@@ -1,3 +1,8 @@
+2005-12-22  Jean-Louis Martineau <martineau@zmanda.com>
+
+	* restore-src/amidxtaped.c (cleanup): Function registered with atexit
+	  to remove the log file.
+
 2005-12-20  Jean-Louis Martineau <martineau@zmanda.com>
 
 	* server-src/Makefile.am (noinst_HEADERS): Add taperscan.h.
